fix bug in da_kitti_dataset_mt.yaml

--- a/tools/cfgs/dataset_configs/da_kitti_dataset_mt.yaml
+++ b/tools/cfgs/dataset_configs/da_kitti_dataset_mt.yaml
@@ -1,4 +1,4 @@
-DATASET: 'KittiDatasetMeanTeacher'
+DATASET: 'KittiDatasetMT'
 DATA_PATH: '../data/kitti'
 
 POINT_CLOUD_RANGE: [-75.2, -75.2, -2, 75.2, 75.2, 4]
