--- a/tools/cfgs/dataset_configs/da_kitti_dataset.yaml
+++ b/tools/cfgs/dataset_configs/da_kitti_dataset.yaml
@@ -35,7 +35,7 @@ DATA_AUGMENTOR:
 
 POINT_FEATURE_ENCODING: {
     encoding_type: absolute_coordinates_encoding,
-    used_feature_list: ['x', 'y', 'z'],
+    used_feature_list: ['x', 'y', 'z', 'intensity'],
     src_feature_list: ['x', 'y', 'z', 'intensity'],
 }
 
